--- a/coding-task-03/index.html
+++ b/coding-task-03/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Coding-Task 03</title>
 </head>
 
 <body>
